Fix up Tray form markup
Fixes: FALCOR-318

Test plan:
- If there's room underneath it, the datepicker in the
  Tray should now appear beneath the input
- If there's not room, the datepicker will still appear
  above the input and get cut off (being addressed in
  separate INSTUI ticket that will add a position
  prop to the datepicker)

Reviewed-on: https://gerrit.instructure.com/114035
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Product-Review: Chris Hart <chart@instructure.com>

--- a/src/components/UpdateItemTray/styles.css
+++ b/src/components/UpdateItemTray/styles.css
@@ -1,10 +1,6 @@
-/* Variables are defined in ./theme.js */
-
 .root {
-  font-size: var(--fontSize);
-  font-family: var(--fontFamily);
-  font-weight: var(--fontWeight);
-
-  color: var(--color);
   background: var(--background);
+  width: 19rem;
+  max-width: 100%;
+  box-sizing: border-box;
 }
